--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hrushikesh Katti - Data Science & AI/ML Portfolio</title>
+
+    <!-- Google Fonts: Inter -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- GSAP Core + ScrollTrigger -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+
+    <!-- Your CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -11,7 +20,7 @@
     <nav id="navbar">
         <div class="container">
             <div class="nav-brand">
-                <h3>Hrushikesh Katti</h3>
+                <h3>Hrushikesh S Katti</h3>
             </div>
             <ul class="nav-links">
                 <li><a href="#hero" onclick="scrollToSection('hero')">Home</a></li>
@@ -25,7 +34,7 @@
     <!-- Hero Section -->
     <section id="hero">
         <div class="container">
-            <h1>Hrushikesh Katti</h1>
+            <h1>Hrushikesh S Katti</h1>
             <p>Data Scientist | Machine Learning Engineer | Business Intelligence Analyst</p>
             <button onclick="scrollToSection('about')">My Journey</button>
         </div>
