Added 3  project cards to index.html

--- a/index.html
+++ b/index.html
@@ -50,11 +50,44 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
+        <!-- Projects Section -->
     <section id="projects">
         <div class="container">
             <h2>My Projects</h2>
-            <!-- Project cards will go here -->
+            <div class="projects-grid">
+                <!-- Project 1 -->
+                <div class="project-card" data-tilt data-tilt-glare data-tilt-max-glare="0.5">
+                    <div class="card-inner">
+                        <h3>Movie Success Predictor</h3>
+                        <p>Predicts box office revenue using NLP, ensemble models, and sentiment analysis.</p>
+                        <div class="tech">Python • Scikit-learn • Streamlit • NLP</div>
+                        <a href="#" class="demo-btn" target="_blank">Live Demo</a>
+                        <a href="https://github.com/Hrushikesh-katti/movie-success-predictor" class="github-btn" target="_blank">GitHub</a>
+                    </div>
+                </div>
+
+                <!-- Project 2 -->
+                <div class="project-card" data-tilt data-tilt-glare data-tilt-max-glare="0.5">
+                    <div class="card-inner">
+                        <h3>AI Job Hunt Coach</h3>
+                        <p>Personalized resume + interview prep using LLMs and RAG.</p>
+                        <div class="tech">LangChain • OpenAI • Gradio • RAG</div>
+                        <a href="#" class="demo-btn" target="_blank">Live Demo</a>
+                        <a href="#" class="github-btn" target="_blank">GitHub</a>
+                    </div>
+                </div>
+
+                <!-- Project 3 -->
+                <div class="project-card" data-tilt data-tilt-glare data-tilt-max-glare="0.5">
+                    <div class="card-inner">
+                        <h3>Sales Dashboard (Power BI)</h3>
+                        <p>Interactive KPI tracker with DAX, forecasting, and drill-downs.</p>
+                        <div class="tech">Power BI • DAX • SQL • Forecasting</div>
+                        <a href="#" class="demo-btn" target="_blank">View Dashboard</a>
+                        <a href="#" class="github-btn" target="_blank">GitHub</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
