--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!-- tsParticles for cursor -->
     <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
 
+    <!-- Lucide Icons (for toggle) -->
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
+
     <!-- Your CSS -->
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -36,7 +39,10 @@
             </ul>
             <div class="theme-toggle">
                 <input type="checkbox" id="dark-mode-toggle">
-                <label for="dark-mode-toggle"></label>
+                <label for="dark-mode-toggle">
+                    <i data-lucide="sun" class="icon sun"></i>
+                    <i data-lucide="moon" class="icon moon"></i>
+                </label>
             </div>
         </div>
     </nav>
@@ -58,7 +64,7 @@
         </div>
     </section>
 
-        <!-- Projects Section -->
+    <!-- Projects Section -->
     <section id="projects">
         <div class="container">
             <h2>My Projects</h2>
