Added hover effects for contact cards, and fixed contrast issues in dark mode toggle

--- a/index.html
+++ b/index.html
@@ -115,46 +115,66 @@
             <h2>Get In Touch</h2>
             <p>Let's build something amazing together!</p>
             <div class="contact-options">
+                <!-- Email -->
                 <div class="contact-item">
                     <a href="mailto:hrushikeshskatti7@gmail.com" target="_blank">
                         <i data-lucide="mail"></i>
                         <span>Email</span>
+                        <div class="contact-text" data-copy="hrushikeshskatti7@gmail.com">hrushikeshskatti7@gmail.com</div>
                     </a>
                 </div>
+
+                <!-- WhatsApp -->
                 <div class="contact-item">
                     <a href="https://wa.me/919019838537" target="_blank">
                         <i data-lucide="message-circle"></i>
                         <span>WhatsApp</span>
+                        <div class="contact-text" data-copy="9019838537">9019838537</div>
                     </a>
                 </div>
+
+                <!-- Arattai -->
                 <div class="contact-item">
                     <a href="https://arattai.in/@9019838537" target="_blank">
                         <i data-lucide="message-square"></i>
                         <span>Arattai</span>
+                        <div class="contact-text" data-copy="9019838537">9019838537</div>
                     </a>
                 </div>
+
+                <!-- Telegram -->
                 <div class="contact-item">
                     <a href="https://t.me/9019838537" target="_blank">
                         <i data-lucide="send"></i>
                         <span>Telegram</span>
+                        <div class="contact-text" data-copy="9019838537">9019838537</div>
                     </a>
                 </div>
+
+                <!-- SMS -->
                 <div class="contact-item">
                     <a href="sms:+919019838537?body=Hi Hrushikesh, let's connect!" target="_blank">
                         <i data-lucide="phone"></i>
                         <span>SMS</span>
+                        <div class="contact-text" data-copy="9019838537">9019838537</div>
                     </a>
                 </div>
+
+                <!-- LinkedIn -->
                 <div class="contact-item">
                     <a href="https://www.linkedin.com/in/hrushikesh-katti" target="_blank">
                         <i data-lucide="linkedin"></i>
                         <span>LinkedIn</span>
+                        <div class="contact-text" data-copy="linkedin.com/in/hrushikesh-katti">linkedin.com/in/hrushikesh-katti</div>
                     </a>
                 </div>
+
+                <!-- GitHub -->
                 <div class="contact-item">
                     <a href="https://github.com/Hrushikesh-katti/projects-portfolio" target="_blank">
                         <i data-lucide="github"></i>
                         <span>Projects Repo</span>
+                        <div class="contact-text" data-copy="github.com/Hrushikesh-katti/projects-portfolio">github.com/Hrushikesh-katti/projects-portfolio</div>
                     </a>
                 </div>
             </div>
