--- a/index.html
+++ b/index.html
@@ -1,41 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hrushikesh Katti - Data Science & AI/ML Portfolio</title>
-
-    <!-- Google Fonts: Inter -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-
-    <!-- GSAP Core + ScrollTrigger -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-
-    <!-- Vanilla Tilt effect -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.8.1/vanilla-tilt.min.js"></script>
-
-    <!-- tsParticles for cursor -->
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
-
-    <!-- Lucide Icons -->
-    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
-
-    <!-- Your CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Hrushikesh Katti | Data Scientist & AI/ML Engineer</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.2/dist/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.9.3/tsparticles.min.js"></script>
 </head>
 <body>
-    <!-- Navigation Bar -->
-    <nav id="navbar">
-        <div class="container">
+
+    <!-- Floating Navbar -->
+    <nav id="floating-nav" class="floating-nav">
+        <div class="container nav-container">
             <div class="nav-brand">
-                <h3>Hrushikesh S Katti</h3>
+                <img src="assets/portrait.jpg" alt="Hrushikesh" class="nav-portrait">
+                <span class="nav-name">Hrushikesh Katti</span>
             </div>
             <ul class="nav-links">
-                <li><a href="#hero" onclick="scrollToSection('hero')">Home</a></li>
-                <li><a href="#about" onclick="scrollToSection('about')">My Journey</a></li>
-                <li><a href="#projects" onclick="scrollToSection('projects')">Projects</a></li>
-                <li><a href="#contact" onclick="scrollToSection('contact')">Contact</a></li>
+                <li><a href="#hero" class="nav-link" data-section="hero">Home</a></li>
+                <li><a href="#about" class="nav-link" data-section="about">My Journey</a></li>
+                <li><a href="#projects" class="nav-link" data-section="projects">Projects</a></li>
+                <li><a href="#contact" class="nav-link" data-section="contact">Contact</a></li>
             </ul>
             <div class="theme-toggle">
                 <input type="checkbox" id="dark-mode-toggle">
@@ -49,156 +38,153 @@
 
     <!-- Hero Section -->
     <section id="hero">
-        <div class="container">
-            <h1>Hrushikesh S Katti</h1>
-            <p>Data Scientist | Machine Learning Engineer | Business Intelligence Analyst</p>
-            <button onclick="scrollToSection('about')">My Journey</button>
-        </div>
-    </section>
+        <div id="tsparticles"></div>
+        <div class="container hero-content">
+            <div class="portrait-container">
+                <img src="assets/portrait.jpg" alt="Hrushikesh Katti" class="hero-portrait">
+            </div>
+            <h1 class="hero-name">Hrushikesh S Katti</h1>
+            <p class="tagline">Data Scientist | Machine Learning Engineer | Business Intelligence Analyst</p>
 
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <h2>From BBA to AI/ML</h2>
-            <p>
-                I started with a BBA in Marketing, but data pulled me in. From Excel dashboards to building AI models that predict movie success and coach job seekers — I've bridged business and tech.  
-                <br><br>
-                I love turning raw data into insights that drive decisions. Whether it's NLP, computer vision, or scalable analytics, I build tools that work in the real world.
-            </p>
-        </div>
-    </section>
+            <!-- Centered Navbar -->
+            <nav class="hero-nav">
+                <ul class="nav-links">
+                    <li><a href="#hero" class="nav-link" data-section="hero">Home</a></li>
+                    <li><a href="#about" class="nav-link" data-section="about">My Journey</a></li>
+                    <li><a href="#projects" class="nav-link" data-section="projects">Projects</a></li>
+                    <li><a href="#contact" class="nav-link" data-section="contact">Contact</a></li>
+                </ul>
+            </nav>
 
-    <!-- Projects Section -->
-    <section id="projects">
-        <div class="container">
-            <h2>My Projects</h2>
-            <div class="projects-grid">
-                <!-- Project 1 -->
-                <div class="project-card" data-tilt data-tilt-glare data-tilt-max-glare="0.5">
-                    <div class="card-inner">
-                        <h3>Movie Success Predictor</h3>
-                        <p>Predicts box office revenue using NLP, ensemble models, and sentiment analysis.</p>
-                        <div class="tech">Python • Scikit-learn • Streamlit • NLP</div>
-                        <button class="demo-btn" onclick="openModal('https://your-movie-predictor.streamlit.app/?embed=true')">Live Demo</button>
-                        <a href="https://github.com/Hrushikesh-katti/movie-success-predictor" class="github-btn" target="_blank">GitHub</a>
-                    </div>
-                </div>
+            <div class="hero-buttons">
+                <button class="cta-btn" onclick="scrollToSection('about')">My Journey</button>
+                <button class="resume-btn" onclick="openResumeModal()">View Resume</button>
+            </div>
 
-                <!-- Project 2 -->
-                <div class="project-card" data-tilt data-tilt-glare data-tilt-max-glare="0.5">
-                    <div class="card-inner">
-                        <h3>AI Job Hunt Coach</h3>
-                        <p>Personalized resume + interview prep using LLMs and RAG.</p>
-                        <div class="tech">LangChain • OpenAI • Gradio • RAG</div>
-                        <button class="demo-btn" onclick="openModal('https://your-job-coach.gradio.app')">Live Demo</button>
-                        <a href="#" class="github-btn" target="_blank">GitHub</a>
-                    </div>
-                </div>
-
-                <!-- Project 3 -->
-                <div class="project-card" data-tilt data-tilt-glare data-tilt-max-glare="0.5">
-                    <div class="card-inner">
-                        <h3>Sales Dashboard (Power BI)</h3>
-                        <p>Interactive KPI tracker with DAX, forecasting, and drill-downs.</p>
-                        <div class="tech">Power BI • DAX • SQL • Forecasting</div>
-                        <button class="demo-btn" onclick="openModal('https://app.powerbi.com/view?r=your-embed-link')">View Dashboard</button>
-                        <a href="#" class="github-btn" target="_blank">GitHub</a>
-                    </div>
-                </div>
+            <!-- Theme Toggle in Hero -->
+            <div class="theme-toggle hero-toggle">
+                <input type="checkbox" id="dark-mode-toggle-hero">
+                <label for="dark-mode-toggle-hero">
+                    <i data-lucide="sun" class="icon sun"></i>
+                    <i data-lucide="moon" class="icon moon"></i>
+                </label>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
+    <!-- About -->
+    <section id="about">
+        <div class="container">
+            <h2>My Journey</h2>
+            <p>From BBA to AI/ML — I build tools that predict, coach, and scale. Passionate about turning data into decisions and code into impact.</p>
+        </div>
+    </section>
+
+    <!-- Projects Carousel -->
+    <section id="projects">
+        <div class="container">
+            <h2>Projects</h2>
+
+            <!-- Indicators -->
+            <div class="carousel-indicators">
+                <span class="dot active" data-index="0"></span>
+                <span class="dot" data-index="1"></span>
+                <span class="dot" data-index="2"></span>
+            </div>
+
+            <!-- Carousel Wrapper -->
+            <div class="carousel-wrapper">
+                <button class="carousel-arrow left" id="prev-btn">
+                    <i data-lucide="chevron-left"></i>
+                </button>
+
+                <div class="carousel-track">
+                    <!-- Project 1 -->
+                    <div class="project-slide active">
+                        <div class="project-card large">
+                            <div class="card-inner">
+                                <h3>Movie Success Predictor</h3>
+                                <p>Predicts box office performance using NLP & ML.</p>
+                                <div class="tech">Python • Scikit-learn • Streamlit</div>
+                                <a href="#" class="demo-btn" onclick="openModal('https://movie-predictor.streamlit.app')">Demo</a>
+                                <a href="#" class="github-btn">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Project 2 -->
+                    <div class="project-slide">
+                        <div class="project-card large">
+                            <div class="card-inner">
+                                <h3>AI Job Coach</h3>
+                                <p>Personalized career guidance using LLMs & behavioral analytics.</p>
+                                <div class="tech">LangChain • GPT-4 • FastAPI</div>
+                                <a href="#" class="demo-btn" onclick="openModal('https://job-coach.ai')">Demo</a>
+                                <a href="#" class="github-btn">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Project 3 -->
+                    <div class="project-slide">
+                        <div class="project-card large">
+                            <div class="card-inner">
+                                <h3>Power BI Sales Dashboard</h3>
+                                <p>Interactive real-time sales analytics for Fortune 500 client.</p>
+                                <div class="tech">Power BI • DAX • SQL • Azure</div>
+                                <a href="#" class="demo-btn" onclick="openModal('https://sales-dashboard.com')">Demo</a>
+                                <a href="#" class="github-btn">GitHub</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <button class="carousel-arrow right" id="next-btn">
+                    <i data-lucide="chevron-right"></i>
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact -->
     <section id="contact">
         <div class="container">
-            <h2>Get In Touch</h2>
-            <p>Let's build something amazing together!</p>
+            <h2>Let's Connect</h2>
+            <p>hrushikeshskatti7@gmail.com • +91 9019838537</p>
             <div class="contact-options">
-                <!-- Email -->
                 <div class="contact-item">
-                    <a href="mailto:hrushikeshskatti7@gmail.com" target="_blank">
+                    <a href="mailto:hrushikeshskatti7@gmail.com">
                         <i data-lucide="mail"></i>
                         <span>Email</span>
                         <div class="contact-text" data-copy="hrushikeshskatti7@gmail.com">hrushikeshskatti7@gmail.com</div>
                     </a>
                 </div>
-
-                <!-- WhatsApp -->
                 <div class="contact-item">
                     <a href="https://wa.me/919019838537" target="_blank">
                         <i data-lucide="message-circle"></i>
                         <span>WhatsApp</span>
-                        <div class="contact-text" data-copy="9019838537">9019838537</div>
+                        <div class="contact-text" data-copy="+91 9019838537">+91 9019838537</div>
                     </a>
                 </div>
-
-                <!-- Arattai -->
                 <div class="contact-item">
-                    <a href="https://arattai.in/@9019838537" target="_blank">
-                        <i data-lucide="message-square"></i>
-                        <span>Arattai</span>
-                        <div class="contact-text" data-copy="9019838537">9019838537</div>
-                    </a>
-                </div>
-
-                <!-- Telegram -->
-                <div class="contact-item">
-                    <a href="https://t.me/9019838537" target="_blank">
-                        <i data-lucide="send"></i>
-                        <span>Telegram</span>
-                        <div class="contact-text" data-copy="9019838537">9019838537</div>
-                    </a>
-                </div>
-
-                <!-- SMS -->
-                <div class="contact-item">
-                    <a href="sms:+919019838537?body=Hi Hrushikesh, let's connect!" target="_blank">
-                        <i data-lucide="phone"></i>
-                        <span>SMS</span>
-                        <div class="contact-text" data-copy="9019838537">9019838537</div>
-                    </a>
-                </div>
-
-                <!-- LinkedIn -->
-                <div class="contact-item">
-                    <a href="https://www.linkedin.com/in/hrushikesh-katti" target="_blank">
+                    <a href="https://linkedin.com/in/hrushikesh-katti" target="_blank">
                         <i data-lucide="linkedin"></i>
                         <span>LinkedIn</span>
                         <div class="contact-text" data-copy="linkedin.com/in/hrushikesh-katti">linkedin.com/in/hrushikesh-katti</div>
                     </a>
                 </div>
-
-                <!-- GitHub -->
-                <div class="contact-item">
-                    <a href="https://github.com/Hrushikesh-katti/projects-portfolio" target="_blank">
-                        <i data-lucide="github"></i>
-                        <span>Projects Repo</span>
-                        <div class="contact-text" data-copy="github.com/Hrushikesh-katti/projects-portfolio">github.com/Hrushikesh-katti/projects-portfolio</div>
-                    </a>
-                </div>
             </div>
-            <button class="msg-btn" onclick="openResumeModal()">View Resume</button>
+            <button class="msg-btn">Send Message</button>
         </div>
     </section>
 
     <!-- Resume Modal -->
     <div id="resume-modal" class="modal">
-        <div class="modal-content resume-content">
-            <span class="close-btn" onclick="closeResumeModal()">×</span>
-            <iframe id="resume-iframe" src="assets/resume.pdf" frameborder="0"></iframe>
-        </div>
-    </div>
-
-    <!-- Demo Modal -->
-    <div id="demo-modal" class="modal">
         <div class="modal-content">
-            <span class="close-btn" onclick="closeModal()">×</span>
-            <iframe id="demo-iframe" src="" frameborder="0" allowfullscreen></iframe>
+            <span class="close-btn" onclick="closeResumeModal()">x</span>
+            <iframe id="resume-iframe" src="assets/resume.pdf"></iframe>
         </div>
     </div>
-
-    <div id="tsparticles"></div>
 
     <script src="js/script.js"></script>
 </body>
