Improved the logo colors to keep originality, and improved the toggle switch

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                     </div>
                     <div class="skill-item">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" alt="PostgreSQL">
-                        <span>SQL / PostgreSQL</span>
+                        <span>PostgreSQL</span>
                     </div>
                     <div class="skill-item">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/microsoftsqlserver/microsoftsqlserver-plain.svg" alt="SQL Server">
-                        <span>SQL Server</span>
+                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL">
+                        <span>MySQL</span>
                     </div>
                     <div class="skill-item">
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pandas/pandas-original.svg" alt="Pandas">
@@ -89,16 +89,19 @@
                         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/streamlit/streamlit-original.svg" alt="Streamlit">
                         <span>Streamlit</span>
                     </div>
+                    <!-- REAL POWER BI -->
                     <div class="skill-item">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/powerbi/powerbi-original.svg" alt="Power BI">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/New_Power_BI_Logo.svg" alt="Power BI">
                         <span>Power BI</span>
                     </div>
+                    <!-- REAL TABLEAU -->
                     <div class="skill-item">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tableau/tableau-original.svg" alt="Tableau">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Tableau_Logo.png" alt="Tableau">
                         <span>Tableau</span>
                     </div>
+                    <!-- REAL EXCEL -->
                     <div class="skill-item">
-                        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/microsoftsqlserver/microsoftsqlserver-plain.svg" alt="Excel">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Microsoft_Office_Excel_%282019%E2%80%93present%29.svg" alt="Excel">
                         <span>Excel</span>
                     </div>
                 </div>
@@ -107,6 +110,7 @@
             <!-- PROJECTS LIST CARD -->
             <section class="card projects-list-card">
                 <h2>Projects</h2>
+                <p class="hint-text">Click any project to explore in detail</p>
                 <div class="project-item" onclick="scrollToProject(0)">
                     <h3>Movie Success Predictor</h3>
                     <p>Predicts box office revenue with 87% accuracy using NLP & ML.</p>
